Added Playlist, PlayerConfig tests
git-svn-id: http://developer.longtailvideo.com/svn/trunk@281 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/test/PlayerTest.mxml
+++ b/fl5/test/PlayerTest.mxml
@@ -3,6 +3,7 @@
 				layout = "absolute"
 				xmlns:flexui="org.flexunit.flexui.*"
 				invoke="handleOnInvoke(event)"
+				height="800" width="1024"
 				>
 	<mx:Script>
 		<![CDATA[
