- Added SWF testing mechanism
git-svn-id: http://developer.longtailvideo.com/svn/trunk@285 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/test/PlayerTest.mxml
+++ b/fl5/test/PlayerTest.mxml
@@ -7,11 +7,14 @@
 				>
 	<mx:Script>
 		<![CDATA[
+			import com.longtailvideo.jwplayer.utils.RootReference;
+			
 			private function handleOnInvoke(event:InvokeEvent):void {
 				var nativePath:String = event.currentDirectory.nativePath;
 				var arguments:Object = buildArgumentObject(event.arguments);
 				var windowless:Boolean = (arguments['windowless']);
 				var path:String = (arguments['outputpath']);
+				new RootReference(this);
 				if (windowless){
 					new PlayerTestLauncher(path);
 				} else {
