--- a/fl5/test/PlayerTest.mxml
+++ b/fl5/test/PlayerTest.mxml
@@ -1,36 +1,18 @@
 <?xml version = "1.0" encoding = "utf-8"?>
-<mx:WindowedApplication xmlns:mx = "http://www.adobe.com/2006/mxml"
+<mx:Application xmlns:mx = "http://www.adobe.com/2006/mxml"
 				layout = "absolute"
 				xmlns:flexui="org.flexunit.flexui.*"
-				invoke="handleOnInvoke(event)"
-				height="800" width="1024"
+				addedToStage="handleOnInvoke()"
+				height="700" width="1024"
 				>
 	<mx:Script>
 		<![CDATA[
 			import com.longtailvideo.jwplayer.utils.RootReference;
-			
-			private function handleOnInvoke(event:InvokeEvent):void {
-				var nativePath:String = event.currentDirectory.nativePath;
-				var arguments:Object = buildArgumentObject(event.arguments);
-				var windowless:Boolean = (arguments['windowless']);
-				var path:String = (arguments['outputpath']);
+			private function handleOnInvoke():void {
 				new RootReference(this);
-				new PlayerTestLauncher(path, visualRunner);
-			}
-			
-			private function buildArgumentObject(argumentArray:Array):Object{
-				var arguments:Object = {};
-				for (var i:Number=0;i<argumentArray.length;i++){
-					var arr:Array = argumentArray[i].split("=");
-					if (!arr[1]){
-						arguments[arr[0]] = true;
-					} else {
-						arguments[arr[0]] = arr[1];
-					}
-				}
-				return arguments;
+				new PlayerTestLauncher(visualRunner);
 			}
 		]]>
 	</mx:Script>
 	<flexui:TestRunnerBase id="visualRunner" width="100%" height="100%" />
-</mx:WindowedApplication>
+</mx:Application>
